# megalodon

./: .buildinfo  .gitlab-ci.yml  .travis.yml  LICENCE.txt  MANIFEST.in  README.rst  advanced_arguments.html  algorithm_details.html  common_arguments.html  computing_considerations.html  extras_aggregate.html  extras_calibrate.html  extras_merge.html  extras_modified_bases.html  extras_per_read_text.html  extras_phase_variants.html  extras_validate.html  extras_variants.html  file_formats.html  genindex.html  index.html  modbase_training.html  model_training.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  variant_phasing.html
_sources/: advanced_arguments.rst.txt  algorithm_details.rst.txt  common_arguments.rst.txt  computing_considerations.rst.txt  extras_calibrate.rst.txt  extras_merge.rst.txt  extras_phase_variants.rst.txt  extras_validate.rst.txt  extras_variants.rst.txt  index.rst.txt  model_training.rst.txt
_static/: documentation_options.js
docs/: advanced_arguments.rst  algorithm_details.rst  common_arguments.rst  computing_considerations.rst  conf.py  extras_aggregate.rst  extras_calibrate.rst  extras_merge.rst  extras_modified_bases.rst  extras_per_read_text.rst  extras_phase_variants.rst  extras_validate.rst  extras_variants.rst  file_formats.rst  index.rst  modbase_training.rst  model_training.rst  modified_base_calling.rst  reference_anchoring.rst  snp_calling.rst  variant_phasing.rst
megalodon/: __init__.py  __main__.py  _c_decode.c  _c_decode.h  _decode.pyx  _libdecode.pxd  _version.py  aggregate.py  backends.py  banding.py  calibration.py  constrained_decoding.py  decode.pyx  fast5_io.py  logging.py  mapping.py  megalodon.py  megalodon_helper.py  megalodon_multiprocessing.py  mods.py  signal_mapping.py  snps.py  validation.py  variants.py
megalodon_extras/: __main__.py  _extras_parsers.py  aggregate_run.py  calibrate_generate_mod_stats_from_msf.py  calibrate_generate_modified_base_stats.py  calibrate_generate_modified_base_stats_from_mapped_signal.py  calibrate_generate_variant_stats.py  calibrate_merge_modified_bases.py  calibrate_merge_modified_bases_stats.py  calibrate_modified_bases.py  calibrate_variants.py  merge_aggregated_modified_bases.py  merge_modified_bases.py  merge_variants.py  modified_bases_create_ground_truth.py  modified_bases_create_motif_bed.py  modified_bases_describe_alphabet.py  modified_bases_estimate_threshold.py  modified_bases_index_database.py  modified_bases_per_site_thresholds.py  modified_bases_split_by_motif.py  modified_bases_update_database.py  per_read_text_modified_bases.py  (+13 more)
(+64 files in other folders)
