[metadata]
name = megalodon
version = attr: megalodon.__init__.__version__
description = Nanopore base calling augmentation.
license = ont_public_licence
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8; variant=GFM
url = https://github.com/nanoporetech/megalodon
author = Marcus Stoiber
maintainer = Marcus Stoiber
maintainer_email = marcus.stoiber@nanoporetech.com
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: GPU
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages =
    megalodon
    megalodon_extras
package_dir =
    =.
include_package_data = True
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0

# project dependencies (testing deps listed in next section)
install_requires =
    h5py >= 2.2.1
    numpy >= 1.9.0
    scipy >= 1.1.0
    Cython >= 0.25.2
    mappy >= 2.16
    pysam >= 0.15
    ont_fast5_api >= 3.2
    tqdm
    ont-pyguppy-client-lib
    scikit-learn
    seaborn

[options.package_data]
* = model_data/*/*.npz

[options.extras_require]
testing =
    pytest
    black
    sphinx
    sphinx-rtd-theme
    sphinx-argparse

[options.packages.find]
where =
    megalodon/
exclude =
    docs
    tests
    .eggs

[options.entry_points]
console_scripts =
     megalodon = megalodon.__main__:_main
     megalodon_extras = megalodon_extras.__main__:_main

[test]
extras = True

[tool:pytest]
addopts =
    --cov megalodon --verbose --ignore *.egg*
norecursedirs =
    dist
    build
    .tox
    .eggs
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = megalodon
extensions =
    markdown
    gitlab
